@startuml

skinparam linetype ortho

title Select Tempo


''' Class definitions '''

Package "Presentation"
{
	Package "TempoControl"
	{
		class TempoControlView
		{
			update()
		}

		interface TempoKnob
		{
			beatsPerMinuteRange : BeatsPerMinute
			getSelectedTempo() : BeatsPerMinute
		}

		class DigitalTempoKnob
		{
			beatsPerMinuteRange : BeatsPerMinute
			getSelectedTempo() : BeatsPerMinute
		}
	}
}

Package "Application"
{
	class RhythmPlaybackController
	{
		selectTempo(BeatsPerMinute)
	}
}

Package "Domain"
{
	Package "Playback"
	{
		interface TempoTimer
		{
			selectTempo(BeatsPerMinute)
		}
	}
}

Package "HardwareAbstractionLayer"
{
	interface FourDigitDisplay
	{
		setNumber(Integer)
	}
}

Package "Drivers"
{
	class RotaryEncoder
	{
		read() : Integer
	}

	class SegmentDisplay75HC595 << adapter >>
	{
		setNumber(BeatsPerMinute)
		selectDigit(Integer)
		writeSegmentData()
		writeDigitData()
	}

	class Spi
	{
		send(Byte)
	}

	class GpioPin
	{
		set()
		clear()
	}
}

Package "Infrastructure"
{
	class InterruptManager
	{
		enableInterruptsGlobally()
		disableInterruptsGlobally()
		setHandlerForInterrupt(InterruptHandler, InterruptRequest)
	}
}

''' Class relations '''

TempoControlView -down-> FourDigitDisplay
TempoControlView -down-> TempoKnob
TempoControlView -right-> RhythmPlaybackController

TempoKnob <|.. DigitalTempoKnob
DigitalTempoKnob -down-> RotaryEncoder

RhythmPlaybackController -down-> TempoTimer

FourDigitDisplay <|.. SegmentDisplay75HC595
SegmentDisplay75HC595 -> Spi
SegmentDisplay75HC595 -> GpioPin

InterruptManager ..> SegmentDisplay75HC595
InterruptManager ..> RotaryEncoder
InterruptManager ..> Spi

@enduml
